# awair-local-api.rs

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: demo.rs
src/: lib.rs
