[package]
name = "awair-local-api"
description = "A small Rust binding for the Awair Local API"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
authors = ["William Woodruff <william@yossarian.net>"]
readme = "README.md"
homepage = "https://github.com/woodruffw/awair-local-api.rs"
repository = "https://github.com/woodruffw/awair-local-api.rs"
keywords = ["api"]
categories = ["network-programming"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
url = "2.0"
